# code-rag

./: .gitignore  LICENSE  README.md  pyproject.toml
evals/: ABLATION.md  README.md  REPORT.md  dataset.json
scripts/: smoke_chunker_on_flask.py
src/code_rag/: app.py  pipeline.py  retriever.py
src/code_rag/evals/: __init__.py  run.py  types.py  verify.py
src/code_rag/templates/: _results.html  index.html
src/vishanti/: chunker_ast.py  embedder.py  retriever.py
src/vishanti/evals/: __init__.py  run.py  verify.py
tests/: test_app.py  test_chunker_ast.py  test_embedder.py  test_evals.py  test_pipeline.py  test_retriever.py
tests/fixtures/: sample.py
