[project]
name = "code-rag"
version = "0.1.0"
description = "Code RAG with AST-aware chunking and a real eval harness"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "fastembed>=0.8",
    "numpy>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
code_rag = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
